# luminance_test

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
assets/: test2.mtl
assets/models/: cube.mtl  cube2.mtl  test.mtl
assets/textures/: texture.ron
src/: 3d_fs.glsl  main.rs  terrain.rs
src/engine/: entity.rs  entity_registry.rs  key_registry.rs  mod.rs  noise.rs  text.rs  texture.rs  utils.rs
src/engine/hud/: depth_entity.rs  entity.rs  mod.rs  renderer.rs
src/engine/hud/shaders/: fs.glsl
src/engine/sound/: loader.rs  mod.rs  sound_entities.rs
src/engine/spacial/shaders/: vs.glsl
src/engine/spatial/: camera.rs  entity.rs  mod.rs  obj.rs  renderer.rs
src/engine/spatial/depth/: mod.rs
src/engine/spatial/depth/shaders/: fs.glsl  vs.glsl
src/engine/spatial/shaders/: fs.glsl  vs.glsl
