[package]
name = "luminance_test"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.39"
luminance-glfw = "0.12"
luminance-derive = "0.5"

image = "0.23.4"

ron = "0.6.0"
serde = "1.0.111"

lazy_static = "1.4.0"

rusttype = "0.9.2" # Native rust replacement for FreeType (No installation required)

wavefront_obj = "7"
cgmath = "0.17.0"

ambisonic = "0.3.0"
hound = "3.4.0"
